2007-02-28  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/DocrootServlet.java: 
	* projects/core/build/create_serverxml.xsl: 
	* projects/core/build/create_webxml.xsl: 
	In standalone mode server passthrough resources using the DocrootServlet
	instead of creating special context instances in Tomcat configuration.

2007-02-26  Martin Leidig  <mleidig@schlund.de>

	* skel/build-skel.xml: Added new target "check-buildskel", which
	checks if a build-skel.xml in the Pustefix root directory exists
	if it's older than the version from the pfixcore distribution and
	if its content changed. On these conditions the build is stopped
	and the user is requested to replace the old version.

2007-02-23  Martin Leidig  <mleidig@schlund.de>

	Fixed corrupted 304 response problem. 304 Responses for cached
	documents (the new ETag support) must not set a content-type that
	is handled by mod_deflate, because old mod_deflate versions have a bug 
	and gzip the 304 responses too, which causes non-empty response bodies,
	which in turn confuses browsers and leads to long loading times
	and broken documents (especially in conjunction with mod_ssl).

	* src/de/schlund/pfixxml/AbstractXMLServlet.java: Reset content type
	for 304 responses.

2007-02-23  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/config/impl/ContextXMLServletConfigImpl.java: 
	* src/de/schlund/pfixxml/config/impl/ServletInfoRule.java: 
	* src/de/schlund/pfixxml/exceptionprocessor/UniversalExceptionProcessor.java: 
	* src/de/schlund/pfixxml/targets/TargetGenerator.java: 
	* src/de/schlund/pfixxml/AbstractXMLServlet.java: 
	* projects/core/build/create_webxml.xsl: 
	Made path to depend.xml available using a init-parameter. TargetGenerator can
	now lookup its name in projects.xml, if it is not specified in depend.xml.
	Removed deprecated xmlserver.depend.xml property from servlet configuration.